Next Release
============

Features:
  * New option for change streams, "startAfter".

Bug fixes:
  * mongoc_change_stream_next now reports an error if the resume token (_id) is
    not a document. Previously, an error was only reported if the field was
    missing.

mongo-c-driver 1.14.0
=====================

It is my pleasure to announce the MongoDB C Driver 1.14.0.


Features:

  * Support for OpenSSL 1.1.1 and its implementation of TLS v1.3.
  * New function mongoc_stream_should_retry.
  * New accessor mongoc_server_description_last_update_time.
  * New method mongoc_client_reset to be called after forking.

Bug fixes:

  * OP_MSG with unacknowledged writes (write concern of w:0) would serialize
    incorrectly on big-endian platforms, causing writes to use the default
    write concern of w:1.
  * mongoc_collection_update_many and mongoc_collection_delete_many would fail
    with the URI option retryWrites=true.
  * In a transaction, the driver now properly ignores the readConcern configured
    on a client, database, or collection: only the mongoc_transaction_opt_t's
    readConcern is used.
  * Remove timestamp from uninstall scripts to permit reproducible build.
  * Setting mongoc_ssl_opt_t.pem_file or ca_file to a bad file path caused a
    hang with Darwin SSL.
  * Fix the ENABLE_SASL cmake option:
    * Remove unnecessary GSSAPI value. It was equivalent to specifying ENABLE_SASL=CYRUS.
    * ENABLE_SASL=AUTO now correctly chooses SSPI on Windows instead of CYRUS.
  * The client pool failed to set proper apm callbacks for clients created
    via try_pop().


Thanks to everyone who contributed to the development of this release.

  * A. Jesse Jiryu Davis
  * Roberto C. Sánchez
  * Kevin Albertson
  * Samantha Ritter
  * Spencer McKenney
  * Henrik Edin
  * Jeremy Mikola
  * Evgeni Dobranov
  * Derick Rethans
  * 平民·寻梦(Pingmin Fenlly Liu)
  * David Carlier
  * Gustaf Neumann
  * Jeroen
  * Jeroen Ooms
  * Kaitlin Mahar
  * Tomas Mozes
  * Clyde Bazile
