@@ -720,8 +720,9 @@ _is_retryable_write (const mongoc_cmd_parts_t *parts,
       return false;
    }
 
-   if (!mongoc_uri_get_option_as_bool (
-          parts->client->uri, MONGOC_URI_RETRYWRITES, false)) {
+   if (!mongoc_uri_get_option_as_bool (parts->client->uri,
+                                       MONGOC_URI_RETRYWRITES,
+                                       MONGOC_DEFAULT_RETRYWRITES)) {
       return false;
    }
 
